indicadores admin pre test